Fix that input fields of the login form are too small in height on mobile (#33913).
Patch by Bernhard Rohloff.


git-svn-id: http://svn.redmine.org/redmine/trunk@20092 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/responsive.css
+++ b/public/stylesheets/responsive.css
@@ -656,20 +656,6 @@
     F) PAGE SPECIFIC STYLES
   \*----------------------------------------*/
 
-  /* page /login */
-
-  #login-form table {
-    width: 100%;
-  }
-
-  #login-form input#username,
-  #login-form input#password,
-  #login-form input#openid_url,
-  #login-form input#twofa_code {
-    width: 100%;
-    height: auto;
-  }
-
   /* some themes add a margin to login page, remove it on mobile */
   .action-login #main {
     margin: 0;
